# spacy_conll

./: .gitignore  pyproject.toml
spacy_conll/: formatter.py
